--- a/LukaRGB/MDK-ARM/LukaRGB/LukaRGB.build_log.htm
+++ b/LukaRGB/MDK-ARM/LukaRGB/LukaRGB.build_log.htm
@@ -21,41 +21,12 @@ Target DLL:      Segger\JL2CM3.dll V2.99.38.0
 Dialog DLL:      TARMCM1.DLL V1.14.3.0
  
 <h2>Project:</h2>
-d:\PRO\LukaRGB\MDK-ARM\LukaRGB.uvprojx
+d:\PRO\firtst_test\LukaRGB\MDK-ARM\LukaRGB.uvprojx
 Project File Date:  08/04/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'LukaRGB'
-assembling startup_stm32f030x6.s...
-compiling stm32f0xx_it.c...
-compiling gpio.c...
-compiling main.c...
-compiling adc.c...
-compiling stm32f0xx_hal_rcc_ex.c...
-compiling stm32f0xx_hal_adc_ex.c...
-compiling stm32f0xx_hal_msp.c...
-compiling i2c.c...
-compiling tim.c...
-compiling stm32f0xx_hal_rcc.c...
-compiling stm32f0xx_hal_adc.c...
-compiling stm32f0xx_hal_cortex.c...
-compiling stm32f0xx_hal_i2c_ex.c...
-compiling stm32f0xx_hal_dma.c...
-compiling stm32f0xx_hal_flash.c...
-compiling stm32f0xx_hal.c...
-compiling stm32f0xx_hal_pwr.c...
-compiling stm32f0xx_hal_flash_ex.c...
-compiling stm32f0xx_hal_pwr_ex.c...
-compiling stm32f0xx_hal_gpio.c...
-compiling stm32f0xx_hal_exti.c...
-compiling stm32f0xx_hal_i2c.c...
-compiling system_stm32f0xx.c...
-compiling stm32f0xx_hal_tim_ex.c...
-compiling stm32f0xx_hal_tim.c...
-linking...
-Program Size: Code=12576 RO-data=264 RW-data=16 ZI-data=1928  
-FromELF: creating hex file...
+Build target 'LukaRGB'
 "LukaRGB\LukaRGB.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -80,7 +51,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
