--- a/LukaRGB/MDK-ARM/LukaRGB/LukaRGB.build_log.htm
+++ b/LukaRGB/MDK-ARM/LukaRGB/LukaRGB.build_log.htm
@@ -26,7 +26,36 @@ Project File Date:  08/04/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'LukaRGB'
+Rebuild target 'LukaRGB'
+assembling startup_stm32f030x6.s...
+compiling adc.c...
+compiling tim.c...
+compiling stm32f0xx_hal_msp.c...
+compiling stm32f0xx_it.c...
+compiling stm32f0xx_hal_adc_ex.c...
+compiling i2c.c...
+compiling gpio.c...
+compiling main.c...
+compiling stm32f0xx_hal_rcc_ex.c...
+compiling stm32f0xx_hal_adc.c...
+compiling stm32f0xx_hal_rcc.c...
+compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_exti.c...
+compiling stm32f0xx_hal_flash_ex.c...
+compiling stm32f0xx_hal_flash.c...
+compiling stm32f0xx_hal.c...
+compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_dma.c...
+compiling stm32f0xx_hal_gpio.c...
+compiling stm32f0xx_hal_i2c_ex.c...
+compiling stm32f0xx_hal_i2c.c...
+compiling system_stm32f0xx.c...
+compiling stm32f0xx_hal_tim_ex.c...
+compiling stm32f0xx_hal_tim.c...
+linking...
+Program Size: Code=12576 RO-data=264 RW-data=16 ZI-data=1928  
+FromELF: creating hex file...
 "LukaRGB\LukaRGB.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +80,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
